# yansemei-ai-stack

./: .gitignore  .windsurfrules  AI_Agency_Launch_Kit.md  AI_Architect_Roadmap.md  AI_Product_Packages.md  Dev_Repo_And_GitHub_Strategy.md  English-Learning-Plan.html  English-Master-Plan-90d.html  Fiverr_Upwork_AI_Services_Top10_2025.md  INFP_Career_Report.md  Optimize Huice Portfolio.md  Product_Spec_01_AI_Customer_Support.md  Product_Spec_02_AI_Report_Generator.md  Product_Spec_03_Lead_Scoring.md  Product_Spec_04_Competitor_Radar.md  Product_Spec_05_SEO_Content_Factory.md  Product_Spec_Template.md  RPA_Career_Guide.md  Real_World_AI_Service_Scenarios.md  Resume_Final.md  Resume_For_Testing_Job.md  Server_Credentials_Final.md  System_Architecture_Huice_Yansemei.md  VPS_System_Architecture_Complete.md  english-bootcamp-28d.html  n8n_AI_Workflow_Guide.md  supermarket_job_guide.md  supermarket_job_guide_v2.md
huice/: .gitignore  Admin-UI-503错误修复报告.md  Security_Config_Record.md  VPS_Security_Guide.md  backup_system.sh  clean_all_data.sh  docker-compose.yml  fastgpt-config.json  fastgpt.env  ollama_concurrent_chat.py  ollama_ping.py  ollama_single_chat.py  restore_system.sh  setup_env.sh  setup_project.sh  start_all.py  verify_clean_system.sh  代码对比分析报告.md  修改影响分析与改进.md  完整影响分析报告.md  最终问题分析.md  系统清理完成.md  请求流程分析.md  运维记录-MCP-Agent-20251225.md  问题修复方案-Admin-UI.md  项目功能与场景分析.md  项目功能与场景分析_扩展版.md
huice/.kiro/steering/: project-guidelines.md
huice/admin-ui/: .prettierrc.json  Dockerfile  README.md  components.json  env.development.smaple  env.local.sample  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
huice/admin-ui/src/: App.tsx  AppRouter.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
huice/agent-service/: Dockerfile  graph.json  pyproject.toml  start_server.py
huice/agent-service/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
huice/agent-service/src/rag/: testing_agent.py
huice/agent-service/src/rag/chat/: agent_rag.py  agent_rag_anything.py  llms.py  tools.py
huice/chat-ui/: Dockerfile  components.json  eslint.config.js  next.config.mjs  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json
huice/legacy_archive/2025-11-19-mcp-server/: pyproject.toml
huice/legacy_archive/2025-11-19-mcp-server/src/examples/: mcp_testing.py  rag_graph.py
huice/legacy_archive/2025-11-19-mcp-server/src/mcp_server_rag/: server.py
huice/mcp-server/: Dockerfile  pyproject.toml
huice/mcp-server/src/examples/: mcp_testing.py  rag_graph.py  raganything_testing.py
huice/mcp-server/src/mcp_server_rag/: server.py
huice/mcp-server/src/mcp_server_rag_anything/: README.md  __init__.py  config.py  connector.py  example.py  llm_functions.py  rag_core_client.py  server.py  tools.py
huice/rag-core/: .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.lite  LICENSE  MANIFEST.in  README-zh.md  README.md  SECURITY.md  config.ini.example  docker-build-push.sh  docker-compose.yml  env.example  env.siliconflow.example  lightrag.service.example  pyproject.toml  requirements-offline-llm.txt  requirements-offline-storage.txt  requirements-offline.txt  setup.py
(+1050 files in other folders)
