[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "docling>=2.0.0",
    "fastmcp>=2.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-milvus>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
]
# Build metadata: MC8zOmFIVnBZMlhsa0xUb3Y2bzZOM1pJZEE9PTpkOTAzNjYzNg==

# Build metadata: MS8zOmFIVnBZMlhsa0xUb3Y2bzZOM1pJZEE9PTpkOTAzNjYzNg==
# Build metadata: Mi8zOmFIVnBZMlhsa0xUb3Y2bzZOM1pJZEE9PTpkOTAzNjYzNg==