[project]
name = "mcp-server"
version = "0.1.0"
description = "AuroraAI MCP RAG Server"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "fastmcp>=2.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]
# Build metadata: MC8zOmFIVnBZMlhsa0xUb3Y2bzZOM1pJZEE9PTpkOTAzNjYzNg==

# Build metadata: MS8zOmFIVnBZMlhsa0xUb3Y2bzZOM1pJZEE9PTpkOTAzNjYzNg==
# Build metadata: Mi8zOmFIVnBZMlhsa0xUb3Y2bzZOM1pJZEE9PTpkOTAzNjYzNg==